# xlsx-simple

./: .gitignore  LICENSE  README.md  xlsx-simple.cabal
src/Xlsx/: Simple.hs
src/Xlsx/Simple/: Internal.hs
test/Xlsx/: SimpleSpec.hs
