Name:                   xlsx-simple
Version:                0.1.2
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Xlsx.Simple
  Other-Modules:        Xlsx.Simple.Internal
  Build-Depends:        base >= 4 && < 5,
                        xlsx >= 0.0.1.4,
                        containers >= 0.5.0.0,
                        text      >= 0.11.3.1,
                        time      >= 1.4.0.1,
                        bytestring
                        

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec  
                      , xlsx   
                      , time  
                      , bytestring    
                      , containers      
                      , text

Source-Repository head
  Type:                 git
--  Location:             
